--- a/hw2.html
+++ b/hw2.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-  <h1>This is CSS101.html</h1>
+  <h1>CSS101.html</h1>
   <div class="box" onmouseover="playAudio()" onmouseout="pauseAudio()">
-    <audio id="beep" preload="auto">
-      <source src="beep.mp4" type="audio/mp4"></source>
-    </audio>
     This is BOX
   </div>
   <script>
