--- a/hw2.html
+++ b/hw2.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  
   <h1>This is CSS101.html</h1>
   <div class="box" onmouseover="playAudio()" onmouseout="pauseAudio()">
     <audio id="beep" preload="auto">
@@ -29,6 +30,17 @@
       audio.currentTime = 0;
     }
   </script>
+
+
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+  <span style="display: block; width: 100;"> <i>TEST </i> </span>
+  Similique impedit optio neque vitae, qui assumenda aliquam eos
+   dolore aspernatur voluptatum blanditiis soluta excepturi suscipit 
+   dolores mollitia ratione sapiente earum porro.</p>
+
+
+   <div class="box2">this position</div>
 </body>
 
 </html>
